--- a/Learn/week1/w1_D2/w1_D2.md
+++ b/Learn/week1/w1_D2/w1_D2.md
@@ -3,7 +3,7 @@
 **도전! 크로켓 경기 소개 페이지 만들기**
 - 네비게이션 바 기능 구현
 - 이미지 슬라이드
-
+- 탭 버튼 기능 구현
 
 
 ## Q1.
@@ -42,8 +42,15 @@ slide.animate({
 
 ### Q3. 
 
-1. setClass() :
-2. addClass() :
-3. classList.add() : 
-4. classList.set() :
+1. element.addClass() : 해당 element에 클래스 값을 추가하는 메서드
+2. element.classList.add() : 해당 element의 classList 프로퍼티에 클래스 하나 혹은 그 이상을 추가할 수 있는 메서드
+3. element.classList.remove() : 선택된 태그의 특정 클래스 명 혹은 복수개를 제거합니다.
+4. xxx.forEach(function(item){}): 선택된 여러 개의 태그에 특정 코드를 각각 실행시켜줍니다.
 
+### Q4.
+
+1. xxx.previousElementSibling : 이전 요소를 선택합니다.
+2. xxx.nextElementSibling : 다음 요소를 선택합니다.
+3. xxx.parentElement() : 부모 요소를 선택합니다.
+4. xxx.firstElementChild() : 첫번째 자식 요소를 선택합니다.
+5. xxx.lastElementChild() : 마지막 자식 요소를 선택합니다.
