--- a/Learn/week1/w1_D2/w1_D2.md
+++ b/Learn/week1/w1_D2/w1_D2.md
@@ -40,17 +40,137 @@ slide.animate({
 });
 ```
 
-### Q3. 
+## Q3. 
 
 1. element.addClass() : 해당 element에 클래스 값을 추가하는 메서드
 2. element.classList.add() : 해당 element의 classList 프로퍼티에 클래스 하나 혹은 그 이상을 추가할 수 있는 메서드
 3. element.classList.remove() : 선택된 태그의 특정 클래스 명 혹은 복수개를 제거합니다.
 4. xxx.forEach(function(item){}): 선택된 여러 개의 태그에 특정 코드를 각각 실행시켜줍니다.
 
-### Q4.
+## Q4.
 
 1. xxx.previousElementSibling : 이전 요소를 선택합니다.
 2. xxx.nextElementSibling : 다음 요소를 선택합니다.
 3. xxx.parentElement() : 부모 요소를 선택합니다.
 4. xxx.firstElementChild() : 첫번째 자식 요소를 선택합니다.
 5. xxx.lastElementChild() : 마지막 자식 요소를 선택합니다.
+
+
+## Extend 1.
+jQuery란?
+오픈소스 기반의 javascript 라이브러리 <br>
+자바스크립트 코드를 jquery를 사용하여 매우 짧고 간편하게 구현 가능. <br>
+리액트 등의 강세로 요즘은 jQuery를 잘 사용하지 않는 추세. <br>
+<br>
+
+jquery의 ajax 서버 요청 방법은 여전히 유효하여 많이 사용된다. 리액트 방식은 이를 계승했으나 조금 다르다.<br><br>
+```jquery
+<body>
+    <p id='hi' class="hi2">안녕하세요.</p>
+    <input type='text' id='hi3' value='반갑습니다' />
+</body>
+
+#jquery###
+var hi = $("#id).text();
+var hi2 = $(".hi2").text();
+console.log(h1);
+
+```
+
+
+## Extend 2. Ajax(Asynchronous javascript and XML)
+### Ajax란? <br>
+클라이언트(사용자) 가 비동기 방식으로 자바스크립트를 이용하여 화면 전환 없이 서버측에 자료(텍스트, XML, HTML, JSON 등)를 요청할 때 사용함.
+
+### Ajax 관련 메서드
+1. load() 메서드 : 외부 콘텐츠를 가져올 때 사용함.
+
+```
+("요소 선택").load(URL, data, 콜백함수);
+
+-URL : 데이터를 받아올 URL 주소
+-data : URL 요청을 보낼 때 같이 보낼 데이터
+-콜백함수 : 요청이 완료되면 호출될 함수
+```
+2. $.post() 메서드 : 데이터를 서버에 HTTP POST 방식으로 전송한 후 서버 측의 응답을 받을 때 사용함.
+```
+$.post(URL, data, 콜백함수);
+```
+
+3. $.get() 메서드 : 데이터를 서버에 HTTP GET 방식으로 전송한 후 서버 측의 응답을 받을 때 사용함.
+```
+$.get(URL, 콜백함수);
+```
+4. $.getJSON() 메서드 : 데이터를 서버에 HTTP GET 방식으로 전송한 후 서버 측의 응답을 JSON 형식으로 받을 때 사용함.
+```
+$.getJSON(URL, data, 콜백함수);
+```
+5. $.getScript() 메서드 : Ajax를 이용하여 외부 자바스크립트를 불러옴.
+```
+$.getScript(URL, success(response, status));
+
+- success(response, status) : 요청이 성공하면 실행하는 기능 지정,
+- response : 요청으로부터의 결과 데이터 포함
+- status : 요청의 상태
+```
+6. .ajaxStop(function(){ ... }) 메서드 : 비동기 방식으로 서버에 응답 요청이 완료되었을 때 함수가 실행.
+```
+$(document).ajaxStop(function(){ ... });
+```
+7. ajaxSuccess(function(){ ... }) 메서드 : ajax 요청이 성공적으로 완료되면 함수가 실행.
+```
+$(document).ajaxSuccess(function(event, xhr, options){ ... });
+
+- event : 이벤트 객체
+- xhr : XMLHttpRequest 객체
+- options : Ajax 요청에서 사용하는 옵션
+```
+8. .ajaxComplete(function(){ ... }) 메서드 : ajax 통신이 완료되면 함수가 실행함.
+```
+$(document).ajaxComplete(function(event, xhr, options){ ... });
+```
+9. $.ajax() 메서드 : 데이터를 서버에 HTTP POST, GET 방식으로 전송할 수 있으며, HTML, XML, Json, 텍스트 형태에 데이터를 요청할 수 있는 통합적인 메서드입니다. 즉, $.post(), $.get(), $getJSON() 메서드의 기능을 하나로 합쳐놓은 메서드임.
+```
+$.ajax({
+    url : "전송 페이지",
+    type : "전송 방식",
+    data : "전송할 데이터",
+    datatype : "요청한 데이터 형식" (html, xml, json, text, jsonp)
+    success : function(data) {
+         전송에 성공하면 실행될 코드;
+    }
+    error : function(){
+         전송에 실패하면 실행될 코드
+    }
+})
+```
+
+## Extend 2.
+Css selector :
+
+1. #id
+2. .className
+3. tagName
+
+
+## Extend 3. CSS Layout
+https://studiomeal.com/archives/197
+
+## Extend 4. 
+원래 this는 지칭한 자신(=즉 부모) 객체를 가르킴
+
+## Extend 5. 
+화살표 함수의 this는 윈도우를 가리키므로 this를 거의 사용하지 않음
+
+## Extend 6. 
+json은 객체 형태의 표준구조
+
+```
+let data = {
+    name: '조성우',
+    age: 27,
+}
+
+```
+위에서 name, age는 '필드'에 해당 <br>
+ref : https://json.org/example.html
